[package]
name = "pallet-dao-democracy"
version = "4.0.0-dev"
authors = { workspace = true }
edition = "2021"
license = "Apache-2.0"
homepage = { workspace = true }
repository = { workspace = true }
description = "Societal DAO Democracy Pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Third-party dependencies
log = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, features = ["alloc"] }

# Primitives
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# Frame dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

# Local Dependencies
dao-primitives = { workspace = true }
pallet-dao-assets = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-dao = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-dao/std",
	"pallet-dao-assets/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime",]
