[package]
name = "pallet-dao-democracy-precompile"
version = "1.0.0-dev"
description = "Societal DAO Democracy Pallet Eth Precompile"
authors = { workspace = true }
homepage = { workspace = true }
edition = "2021"
license = "Apache-2.0"
publish = false
repository = { workspace = true }

[dependencies]

# Third-party dependencies
log = { workspace = true }
num_enum = { workspace = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-preimage = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

# Local Dependencies
pallet-dao-democracy = { default-features = false, path = "../../pallets/dao-democracy" }

# From Moonbeam
precompile-utils = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }

# Substrate
pallet-balances = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-timestamp = { workspace = true }
scale-info = {workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-dao-democracy/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
