[package]
name = "pallet-dao-eth-governance-precompile"
version = "1.0.0-dev"
description = "Societal DAO ETH Governance Pallet EVM Precompile"
authors = { workspace = true }
homepage = { workspace = true }
edition = "2021"
license = "Apache-2.0"
publish = false
repository = { workspace = true }

[dependencies]

# Third-party dependencies
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

# Local Dependencies
pallet-dao-eth-governance = { default-features = false, path = "../../pallets/dao-eth-governance" }

# From Moonbeam
precompile-utils = { workspace = true }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-dao-eth-governance/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"sp-runtime/std",
	"sp-std/std",
]
