[package]
name = "pallet-dao-membership-precompile"
version = "1.0.0-dev"
description = "Societal DAO Membership Pallet Eth Precompile"
authors = ["Societal Labs <https://github.com/sctllabs"]
homepage = "https://www.sctl.xyz"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/sctllabs/societal-node"

[dependencies]
log = "0.4"

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/sctllabs/frontier", branch = "polkadot-v0.9.37", default-features = false }
pallet-evm = { git = "https://github.com/sctllabs/frontier", branch = "polkadot-v0.9.37", default-features = false, features = [ "forbid-evm-reentrancy" ] }

# Local Dependencies
pallet-dao-membership = { version = "4.0.0-dev", default-features = false, path = "../../pallets/dao-membership" }
# From Moonbeam
precompile-utils = { version = "0.1.0", default-features = false, git = "https://github.com/sctllabs/moonbeam.git", branch = "moonbeam-polkadot-v0.9.37" }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-dao-membership/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"sp-runtime/std",
	"sp-std/std",
]
